<resources>
    <string name="app_name">Administrar</string>
    <string name="action_settings">Adicionar</string>
    <string name="excluir">Exluir</string>
    <string name="atualiza">Atualizar</string>
    <string name="txtadmin">Administração</string>

    <string name="btn_cadastro_categoria">Cadastro de categorias e produtos</string>
    <string name="btn_cadastro_categoria2">CADASTRO DE CATEGORIAS</string>
    <string name="btn_cadastro_area">Cadastro de Áreas</string>
    <string name="btn_cadastro_area2">CADASTRO DE ÁREAS</string>
    <string name="btn_cadastro_produtos">Cadastro de produtos</string>
    <string name="listar_pedidos">Listar Pedidos</string>

    <string name="btn_salvar_categoria">Salvar</string>
    <string name="hint">Insira a categoria</string>
    <string name="hintarea">Insira a Area</string>
    <string name="hintcidadearea">Insira a cidade da area</string>
    <string name="hinttaxaarea">Insira a taxa da area</string>
    <string name="hintprodutos">Insira o nome do produto</string>
    <string name="hintdescrprodutos">Insira descrição do produto</string>
    <string name="hintprecoprodutos">Insira preço do produto</string>

    <string name="txtprodutos">Produto:\u0020   </string>
    <string name="txtdescricao">Descrição:\u0020   </string>
    <string name="txtpreco">Preço:\u0020   </string>
    <string name="txtqtd">Quantidade:\u0020   </string>
    <string name="txtobs">Observação:\u0020</string>

    <string name="txtbairroarea">Bairro:\u0020</string>
    <string name="txtcidade">Cidade:\u0020</string>
    <string name="txttaxa">Taxa:\u0020</string>

</resources>
