<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_cadastro_area2"
        android:textAppearance="?android:attr/textAppearanceLarge" />




            <EditText
                android:id="@+id/nomearea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "@string/hintarea"
                android:maxLines="1" />


            <EditText
                android:id="@+id/cidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint= "@string/hintcidadearea" />


                <EditText
                    android:id="@+id/taxaarea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint= "@string/hinttaxaarea" />

        <Button android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_salvar_categoria"
            android:clickable="true"
            android:background="@color/colorAccent"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"/>
    </LinearLayout>
