<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="50dp">

            <EditText
                android:id="@+id/nomeproduto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint= "@string/hintprodutos"
                android:maxLines="1" />


            <EditText
                android:id="@+id/descricaoprodutos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint= "@string/hintdescrprodutos" />


                <EditText
                    android:id="@+id/precoproduto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint= "@string/hintprecoprodutos" />


        <Button android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_salvar_categoria"
            android:clickable="true"
            android:background="@color/colorAccent"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"/>
    </LinearLayout>
