<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/btn_cadastro_categoria2"
            android:textAppearance="?android:attr/textAppearanceLarge" />


    </RelativeLayout>


    <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint= "@string/hint"
            android:maxLines="1" />


    <Button android:id="@+id/saveBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_salvar_categoria"
        android:clickable="true"
        android:background="@color/colorAccent"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"/>
</LinearLayout>
