<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.br.adminestabelecimento.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtadmin"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginTop="18dp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_cad_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cadastro_categoria"
        android:textSize="20sp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />





    <Button
        android:id="@+id/btn_lista_pedidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listar_pedidos"
        android:textSize="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="103dp" />






</RelativeLayout>
